--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ steamworks = "0.11.0"
 tokio = { version = "1.38.0", features = ["full"] }
 toml = "0.8.14"
 rs_openai = "0.4.1"
+word2vec = "0.3.3"
+lazy_static = "1.4.0"
