--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ toml = "0.8.14"
 rs_openai = "0.4.1"
 word2vec = "0.3.3"
 lazy_static = "1.4.0"
-wavy = "0.9.1"
-fon = "0.5.0" 
 hound = "3.5.1"
+futures = "0.3.30"
+cpal = "0.15.3"
+ringbuf = "0.3.0" # needs to be outdated to work with cpal
