--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ futures = "0.3.30"
 cpal = "0.15.3"
 ringbuf = "0.3.0" # needs to be outdated to work with cpal
 elevenlabs_rs = "0.2.0"
+bincode = "1.3.3"
