--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ cpal = "0.15.3"
 ringbuf = "0.3.0" # needs to be outdated to work with cpal
 elevenlabs_rs = "0.2.0"
 bincode = "1.3.3"
+bevy_rapier3d = { version = "0.26.0", features = ["serde-serialize", "parallel", "enhanced-determinism"] } # makes use of enhanced-determinism for multiplayer
